--- a/Transportaciones_CICESE/app/src/main/AndroidManifest.xml
+++ b/Transportaciones_CICESE/app/src/main/AndroidManifest.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.transporte.cicese.transportaciones_cicese">
-
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true"
+    />
 
     <application
         android:allowBackup="true"
@@ -12,6 +17,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_key" />
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+
         <activity
             android:name=".SplashActivity"
             android:theme="@style/AppTheme.NoActionBar">
@@ -60,6 +72,8 @@
             android:name=".InicioChoferesActivity"
             android:label="@string/title_activity_inicio_choferes"
             android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".pruebaMapIntents"></activity>
+        <activity android:name=".MapsActivity"></activity>
 
 
 
@@ -77,6 +91,8 @@
             </intent-filter>
         </service>
         <!-- [END firebase_service] -->
+
+
     </application>
 
 </manifest>
