--- a/Transportaciones_CICESE/app/src/main/AndroidManifest.xml
+++ b/Transportaciones_CICESE/app/src/main/AndroidManifest.xml
@@ -44,24 +44,29 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".RegistroChoferActivity"
-            android:label="@string/registrar_chofer" />
+            android:label="@string/registrar_chofer"
+            android:parentActivityName="com.transporte.cicese.transportaciones_cicese.MenuRegistrosAsistenteActivity"/>
         <activity
             android:name=".RegistroPasajeroActivity"
-            android:label="@string/registrar_pasajero" />
+            android:label="@string/registrar_pasajero"
+            android:parentActivityName="com.transporte.cicese.transportaciones_cicese.MenuRegistrosAsistenteActivity"/>
         <activity
             android:name=".RegistroAsistenteActivity"
-            android:label="@string/registrar_asistente" />
+            android:label="@string/registrar_asistente"
+            android:parentActivityName="com.transporte.cicese.transportaciones_cicese.MenuRegistrosAsistenteActivity"/>
         <activity android:name=".chatActivity" />
         <activity
             android:name=".RegistroSolicitudActivity"
-            android:label="@string/registrar_solicitud" />
+            android:label="@string/registrar_solicitud"
+            android:parentActivityName="com.transporte.cicese.transportaciones_cicese.MenuRegistrosAsistenteActivity"/>
         <activity
             android:name=".updateSolicitud"
             android:label="@string/actualizaciones"
             android:parentActivityName="com.transporte.cicese.transportaciones_cicese.InicioPasajeroActivity"/>
         <activity
             android:name=".TextoRapidoActivity"
-            android:label="Seleccionar texto rápido" />
+            android:label="Seleccionar texto rápido"
+            android:parentActivityName="com.transporte.cicese.transportaciones_cicese.InicioChoferesActivity"/>
         <activity
             android:name=".InicioAsistentesActivity"
             android:label="@string/incio"
@@ -72,7 +77,7 @@
             android:parentActivityName="com.transporte.cicese.transportaciones_cicese.InicioPasajeroActivity" />
         <activity
             android:name=".InicioChoferesActivity"
-            android:label="@string/title_activity_inicio_choferes"
+            android:label="@string/incio"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".pruebaMapIntents" />
         <activity android:name=".MapsActivity" />
